feat(ChangeUser): create change user interface

--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -85,7 +85,18 @@
         "fullName": "Անուն ազգանուն",
         "role": "Կարգավիճակ",
         "stations": "Լցակայաններ",
-        "action": "Գործողություն"
+        "action": "Գործողություն",
+        "addChangeUser": {
+            "addNewUser":"Ավելացնել նոր օգտագործող",
+            "changeUserData":"Փոփոխել օգտագործողի տվյալները",
+            "name": "Անուն",
+            "surname": "Ազգանուն",
+            "phone": "Հեռախոսահամար",
+            "email": "Էլեկտրոնային հասցե",
+            "role": "Կարգավիճակ",
+            "chooseStationsGroup": "Ընտրել լցակայանների ցանցը",
+            "searchStations": "Փնտրել լցակայան(ներ)ը"
+        }
     },
     "operations": {
         "save": "Պահպանել",
