--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -85,7 +85,18 @@
         "fullName": "Имя фамилия",
         "role": "Роль",
         "stations": "Станции",
-        "action": "Действие"
+        "action": "Действие",
+        "addChangeUser": {
+            "addNewUser":"Добавить нового пользователя",
+            "changeUserData":"Изменить пользовательские данные",
+            "name": "Имя",
+            "surname": "Фамилия",
+            "phone": "Номер телефона",
+            "email": "Адрес электронной почты",
+            "role": "Статус",
+            "chooseStationsGroup": "Выберите сеть заправочных станций",
+            "searchStations": "Поиск заправочной станци(и)й"
+        }
     },
     "operations": {
         "save": "Сохранить",
