--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -66,7 +66,8 @@
     "fuelPrices": {
         "changeAllFuelPricesOfStationsGroup": "Изменить цены на все топливо в сети",
         "addAllDiscountsOfStationsGroup": "Добавьте скидки на все топливо в сети",
-        "changeStationFuelPrices": "Изменить цены на топливо на заправочной станции"
+        "changeStationFuelPrices": "Изменить цены на топливо на заправочной станции",
+        "price": "Цена"
     },
     "dispensers": {
         "dispenserId": "ID дозатора",
