--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -66,7 +66,8 @@
     "fuelPrices": {
         "changeAllFuelPricesOfStationsGroup": "Change the prices of all fuel on the network",
         "addAllDiscountsOfStationsGroup": "Add discounts on all fuel in the network",
-        "changeStationFuelPrices": "Change station fuel prices"
+        "changeStationFuelPrices": "Change station fuel prices",
+        "price": "Price"
     },
     "dispensers": {
         "dispenserId": "Dispenser ID",
